# clip-vault

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: clip-vault.desktop
src/: annotate_app.rs  app.rs  main.rs  monitor.rs  searcher.rs  store.rs  sync_state.rs  sync_syncer.rs  theme.rs  win_capture.rs
wix/: License.rtf  main.wxs
