[package]
name = "clip-vault"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Clip Vault"
identifier = "com.clipvault.app"
icon = []
copyright = "MIT 2025"
category = "public.app-category.utilities"

[dependencies]
eframe = "0.31"
egui = "0.31"
arboard = "3"
global-hotkey = "0.6"
image = { version = "0.25", features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tray-icon = "0.22.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
