[package]
name = "clip-vault"
version = "0.3.0"
edition = "2021"

[package.metadata.bundle]
name = "Clip Vault"
identifier = "com.clipvault.app"
icon = []
copyright = "MIT 2025"
category = "public.app-category.utilities"

[dependencies]
eframe  = "0.31"
egui    = "0.31"
# Clipboard
arboard = "3"
global-hotkey = "0.6"
tray-icon = "0.22.0"
# Search
regex        = "1"
ignore       = "0.4"
memmap2      = "0.9"
num_cpus     = "1"
open         = "5.3.3"
encoding_rs  = "0.8.35"
# Sync
notify   = "6"
sha2     = "0.10"
hex      = "0.4"
walkdir  = "2"
rayon    = "1"
# Screenshot + annotation
screenshots = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Shared
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
dirs       = "5"
anyhow     = "1"
rfd        = "0.15"
unicode-normalization = "0.1"

# Windows-only: low-level Win32 APIs for smart capture
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[package.metadata.deb]
maintainer = "Clip Vault Contributors"
copyright = "MIT 2025"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/clip-vault", "usr/bin/", "755"],
    ["assets/clip-vault.desktop", "usr/share/applications/", "644"],
    ["assets/clip-vault.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/clip-vault", dest = "/usr/bin/clip-vault", mode = "755" },
    { source = "assets/clip-vault.desktop", dest = "/usr/share/applications/clip-vault.desktop", mode = "644" },
    { source = "assets/clip-vault.png", dest = "/usr/share/icons/hicolor/256x256/apps/clip-vault.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk3 = "*"
libxcb = "*"
dbus-libs = "*"
libayatana-appindicator-gtk3 = "*"
libxdo = "*"
libxkbcommon = "*"
openssl-libs = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
